--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -5,14 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="15dp">
-
-    <ImageView
-        android:id="@+id/iv_mbuh"
-        android:layout_width="100sp"
-        android:layout_height="52dp"
-        android:layout_weight="1"
-        tools:srcCompat="@android:drawable/sym_def_app_icon" />
+    android:paddingRight="15dp"
+    android:paddingLeft="15dp"
+    android:paddingTop="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +19,8 @@
             android:id="@+id/tv_nama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+
+            android:textStyle="bold"
             android:text="Event"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -33,11 +29,46 @@
             android:id="@+id/tv_tanggal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="5sp"
             android:text="Tanggal"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textColor="@color/colordate"
+            android:textSize="8dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="#normis"
+                android:textSize="9dp"
+                android:padding="3sp"
+                android:background="@color/bgtag"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="#normis"
+                android:textSize="9dp"
+                android:padding="3sp"
+                android:layout_marginLeft="5sp"
+                android:background="@color/bgtag"/>
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_with_paragraphs"
+            android:textSize="12dp"
+            />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/iv_mbuh"
+        android:layout_width="200sp"
+        android:layout_height="130dp"
+        android:layout_weight="1"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@android:drawable/sym_def_app_icon" />
 
 </LinearLayout>
